[package]
name = "build-system"
version = "0.1.3"
edition = "2024"
authors = [ "Aurora", "Hazel Stagner" ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
cargo_metadata = "0.23.0"
iso = { path = "../iso" }
